Fixed grid whitespace issue and MediaPlayer z-index and speed margin

--- a/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
@@ -145,7 +145,7 @@
 
     .item {
       height: auto;
-      margin: 0;
+      margin: 0 0 -5px 0;
       margin-bottom: 20px;
       display: block;
 
@@ -156,7 +156,7 @@
       img {
         width: 100%;
         height: auto;
-        margin: 0;
+        margin: 0 0 -4px 0;
       }
 
       &.has-picture .item-meta {
